# ncmat-clathrates

./: HighNESS_1088D2O_192O2_sg1_ClathrateHydrate-sII.ncmat  HighNESS_1088D2O_192O2_sg1_ClathrateHydrate-sII_mag.ncmat  HighNESS_1088D2O_192O2_sg1_ClathrateHydrate-sII_mag_Ice.ncmat  HighNESS_1088D2O_64TDF_0O2_sg1_ClathrateHydrate-sII.ncmat  HighNESS_1088D2O_64TDF_128O2_sg1_ClathrateHydrate-sII.ncmat  HighNESS_1088D2O_64TDF_128O2_sg1_ClathrateHydrate-sII_mag.ncmat  HighNESS_1088D2O_64TDF_128O2_sg1_ClathrateHydrates-sII.ncmat  HighNESS_1088D2O_64TDF_sg1_ClathrateHydrate-sII.ncmat  HighNESS_1088D2O_sg1_EmptyClathrateHydrate-sII.ncmat  HighNESS_1088H2O_192O2_sg1_ClathrateHydrate-sII.ncmat  HighNESS_1088H2O_192O2_sg1_ClathrateHydrate-sII_mag.ncmat  HighNESS_1088H2O_64THF_0O2_sg1_ClathrateHydrate-sII.ncmat  HighNESS_1088H2O_64THF_128O2_sg1_ClathrateHydrate-sII.ncmat  HighNESS_1088H2O_64THF_128O2_sg1_ClathrateHydrate-sII_mag.ncmat  HighNESS_1088H2O_64THF_sg1_ClathrateHydrate-sII.ncmat  HighNESS_1088H2O_64THF_sg1_ClathrateHydrates-sII.ncmat  HighNESS_1088H2O_sg1_EmptyClathrateHydrate-sII.ncmat  README.md  ncplugin-MagScat_O2_pdos_Debye_mag.ncmat  ncplugin-MagScat_O2_pdos_deuterated_O2-clathrate_mag.ncmat  ncplugin-MagScat_O2_pdos_deuterated_TDFO2-clathrate_mag.ncmat  ncplugin-MagScat_O2_pdos_hydrogenated_O2-clathrate_mag.ncmat  ncplugin-MagScat_O2_pdos_hydrogenated_THFO2-clathrate_mag.ncmat  plot_example.ipynb  plot_ver_do2-cla.ipynb  plot_ver_o2-cla.ipynb  plot_ver_tdfo2-cla.ipynb  plot_ver_thfo2-cla.ipynb  pyproject.toml
.github/workflows/: test.yml
(+18 files in other folders)
