[project]
name = "ncrystal-plugin-ClathrateHydrateData"
version = "0.0.1"
readme = "README.md"
description = "NCMAT files of various clathrate hydrates (incl. paramagnetic scattering on enclathrated O2)."
dependencies = [
    "ncrystal-pypluginmgr>=0.0.5",
    "ncrystal-plugin-MagScat@git+https://github.com/highness-eu/ncplugin-MagScat"
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.ncmat"]
